--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,12 +5,20 @@ server.servlet.path=/
 
 #数据库设置
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/hzt?useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/demo?useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 
+#JPA的配置
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql= true
 
+#测试通过注解获取属性
+value=myValue
 
+com.girl.cupSize=B
+com.girl.age=18
 #mybatis-plus设置###
 #mybatis-plus.mapper-locations=classpath*:/mapper/**/*Mapper.xml
 #mybatis-plus.typeAliasesPackage=com.zyqt.hztServer.**.entity
