--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,10 +9,15 @@ spring.datasource.url=jdbc:mysql://localhost:3306/demo?useUnicode=true&character
 spring.datasource.username=root
 spring.datasource.password=root
 
+###mybatis-plus设置###
+mybatis-plus.mapper-locations=classpath:/mapper/**/*Mapper.xml
+mybatis-plus.typeAliasesPackage=com.yuf.demo.**.entity
+#主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
+mybatis-plus.global-config.id-type=3
 #JPA的配置
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.show-sql= true
+#spring.jpa.properties.hibernate.hbm2ddl.auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.show-sql= true
 
 #测试通过注解获取属性
 value=myValue
