--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -29,5 +29,5 @@ com.girl.age=18
 #logging.config=classpath:conf/logback-dev.xml
 
 #文件存储路径
-storage.path=D:/demo/media
+storage.path=D:/demo/media/
 
