--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,6 +3,28 @@ server.port=9090
 #项目根路径
 server.servlet.path=/
 
+#thymeleaf默认配置
+# Enable template caching.
+#spring.thymeleaf.cache=true 
+# Check that the templates location exists.
+#spring.thymeleaf.check-template-location=true 
+# Content-Type value.
+#spring.thymeleaf.content-type=text/html 
+# Enable MVC Thymeleaf view resolution.
+#spring.thymeleaf.enabled=true 
+# Template encoding.
+#spring.thymeleaf.encoding=UTF-8 
+# Comma-separated list of view names that should be excluded from resolution.
+#spring.thymeleaf.excluded-view-names= 
+# Template mode to be applied to templates. See also StandardTemplateModeHandlers.
+#spring.thymeleaf.mode=HTML5 
+# Prefix that gets prepended to view names when building a URL.
+spring.thymeleaf.prefix=classpath:/templates/pages/
+# Suffix that gets appended to view names when building a URL.
+#spring.thymeleaf.suffix=.html  
+#spring.thymeleaf.template-resolver-order= # Order of the template resolver in the chain. 
+#spring.thymeleaf.view-names= # Comma-separated list of view names that can be resolved.
+
 #数据库设置
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/demo?useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false
@@ -26,7 +48,7 @@ com.girl.cupSize=B
 com.girl.age=18
 
 ###日志配置###
-#logging.config=classpath:conf/logback-dev.xml
+logging.config=classpath:config/logback.xml
 
 #文件存储路径
 storage.path=D:/demo/media/
