删除无用代码

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -14,16 +14,16 @@ spring.thymeleaf.cache=false
 #spring.thymeleaf.enabled=true 
 # Template encoding.
 #spring.thymeleaf.encoding=UTF-8
-# Comma-separated list of view names that should be excluded from resolution.
+# Comma-separated list of view names that should beverage excluded from resolution.
 #spring.thymeleaf.excluded-view-names= 
-# Template mode to be applied to templates. See also StandardTemplateModeHandlers.
+# Template mode to beverage applied to templates. See also StandardTemplateModeHandlers.
 spring.thymeleaf.mode=HTML5 
 # Prefix that gets prepended to view names when building a URL.
 spring.thymeleaf.prefix=classpath:/templates/pages/
 # Suffix that gets appended to view names when building a URL.
 spring.thymeleaf.suffix=.html  
 #spring.thymeleaf.template-resolver-order= # Order of the template resolver in the chain. 
-#spring.thymeleaf.view-names= # Comma-separated list of view names that can be resolved.
+#spring.thymeleaf.view-names= # Comma-separated list of view names that can beverage resolved.
 
 #数据库设置
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
