--- a/pom.xml
+++ b/pom.xml
@@ -23,10 +23,10 @@
 			<artifactId>spring-boot-starter-test</artifactId><!-- 测试模块，包括JUnit、Hamcrest、Mockito -->
 			<scope>test</scope> 
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId><!-- Java对象持久化标准 -->
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-data-jpa</artifactId>&lt;!&ndash; Java对象持久化标准 &ndash;&gt;-->
+<!--		</dependency>-->
         <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId><!-- 热启动 -->
@@ -118,11 +118,11 @@
   			<version>4.5.6</version>
 		</dependency>
 		<!-- 工作流引擎 -->
-		<dependency>  
-            <groupId>org.activiti</groupId>  
-            <artifactId>activiti-spring-boot-starter-basic</artifactId>  
-            <version>6.0.0</version>  
-        </dependency> 
+		<dependency>
+            <groupId>org.activiti</groupId>
+            <artifactId>activiti-spring-boot-starter-basic</artifactId>
+            <version>6.0.0</version>
+        </dependency>
 
 	</dependencies>
 
