--- a/pom.xml
+++ b/pom.xml
@@ -118,11 +118,11 @@
   			<version>4.5.6</version>
 		</dependency>
 		<!-- 工作流引擎 -->
-		<dependency>
-            <groupId>org.activiti</groupId>
-            <artifactId>activiti-spring-boot-starter-basic</artifactId>
-            <version>6.0.0</version>
-        </dependency>
+<!--		<dependency>-->
+<!--            <groupId>org.activiti</groupId>-->
+<!--            <artifactId>activiti-spring-boot-starter-basic</artifactId>-->
+<!--            <version>6.0.0</version>-->
+<!--        </dependency>-->
 
 	</dependencies>
 
