--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,46 +1,68 @@
 #server 基础配置
 server:
   port: 9090
-#项目根路径
-  servlet:
-    path: /
+  #项目根路径
+  path: /
 
 #thymeleaf默认配置
 # Enable template caching.生产置为true
 spring:
   thymeleaf:
     cache: false
-# Check that the templates location exists.
-#spring.thymeleaf.check-template-location=true 
-# Content-Type value.
-#spring.thymeleaf.content-type=text/html 
-# Enable MVC Thymeleaf view resolution.
-#spring.thymeleaf.enabled=true 
-# Template encoding.
-#spring.thymeleaf.encoding=UTF-8
-# Comma-separated list of view names that should beverage excluded from resolution.
-#spring.thymeleaf.excluded-view-names= 
-# Template mode to beverage applied to templates. See also StandardTemplateModeHandlers.
+    # Check that the templates location exists.
+    #spring.thymeleaf.check-template-location=true
+    # Content-Type value.
+    #spring.thymeleaf.content-type=text/html
+    # Enable MVC Thymeleaf view resolution.
+    #spring.thymeleaf.enabled=true
+    # Template encoding.
+    #spring.thymeleaf.encoding=UTF-8
+    # Comma-separated list of view names that should beverage excluded from resolution.
+    #spring.thymeleaf.excluded-view-names=
+    # Template mode to beverage applied to templates. See also StandardTemplateModeHandlers.
     mode: HTML5
-# Prefix that gets prepended to view names when building a URL.
+    # Prefix that gets prepended to view names when building a URL.
     prefix: classpath:/templates/pages/
-# Suffix that gets appended to view names when building a URL.
+    # Suffix that gets appended to view names when building a URL.
     suffix: .html
-#spring.thymeleaf.template-resolver-order= # Order of the template resolver in the chain. 
-#spring.thymeleaf.view-names= # Comma-separated list of view names that can beverage resolved.
+  #spring.thymeleaf.template-resolver-order= # Order of the template resolver in the chain.
+  #spring.thymeleaf.view-names= # Comma-separated list of view names that can beverage resolved.
 
-#数据库设置
+  #数据库设置
   datasource:
     driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/demo?useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false
+    url: jdbc:mysql://localhost:3306/demo?useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false&serverTimezone=GMT
     username: root
     password: root
+
+  # REDIS (RedisProperties)
+  # Redis数据库索引（默认为0）
+  redis:
+    database: 0
+    # Redis服务器地址
+    host: 127.0.0.1
+    # Redis服务器连接端口
+    port: 6379
+    # Redis服务器连接密码（默认为空）
+    password: root
+    # 连接池最大连接数（使用负值表示没有限制）
+    lettuce:
+      pool:
+        max-active: 8
+        # 连接池最大阻塞等待时间（使用负值表示没有限制） 默认 -1
+        max-wait: -1
+        # 连接池中的最大空闲连接 默认 8
+        max-idle: 8
+        # 连接池中的最小空闲连接 默认 0
+        min-idle: 0
+
+
 
 ###mybatis-plus设置###
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*Mapper.xml
   typeAliasesPackage: com.yuf.demo.**.entity
-#主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
+  #主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
   global-config:
     id-type: 3
 #JPA的配置
@@ -63,4 +85,8 @@ logging:
 #文件存储路径
 storage:
   path: D:/demo/media/
+
+
+
+
 
