--- a/pom.xml
+++ b/pom.xml
@@ -72,17 +72,18 @@
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
-			<version>2.8.0</version>
+			<version>2.9.2</version>
 		</dependency>
-<!--		<dependency>
+		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
-			<version>2.8.0</version>
-		</dependency>-->
+			<version>2.9.2</version>
+		</dependency>
+		<!--swagger-ui-->
 		<dependency>
 			<groupId>com.github.xiaoymin</groupId>
-			<artifactId>swagger-bootstrap-ui</artifactId>
-			<version>1.8.2</version>
+			<artifactId>knife4j-spring-boot-starter</artifactId>
+			<version>1.9.6</version>
 		</dependency>
 		<!--shiro-spring 权限管理器-->
 		<dependency>
