--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -34,9 +34,9 @@ spring:
   #数据库设置
   datasource:
     driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/boot_test?useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false&serverTimezone=GMT
+    url: jdbc:mysql://47.108.150.200:3306/boot_test?useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false&serverTimezone=GMT
     username: root
-    password: root
+    password: Pass@2021
 
   # REDIS (RedisProperties)
   # Redis数据库索引（默认为0）
